ci-cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
